package contentmoderationrepo

import (
	"context"
	"errors"

	contentmoderationpb "github.com/nmxmxh/master-ovasabi/api/protos/contentmoderation/v1"
)

type PostgresRepository struct {
	// db *sqlx.DB or pgxpool.Pool, add logger if needed
}

func NewPostgresRepository( /* db, logger */ ) *PostgresRepository {
	return &PostgresRepository{}
}

func (r *PostgresRepository) SubmitContentForModeration(_ context.Context, _, _, _, _ string) (*contentmoderationpb.ModerationResult, error) {
	// TODO: implement SubmitContentForModeration logic
	return nil, errors.New("not implemented")
}

func (r *PostgresRepository) GetModerationResult(_ context.Context, _ string) (*contentmoderationpb.ModerationResult, error) {
	// TODO: implement GetModerationResult logic
	return nil, errors.New("not implemented")
}

func (r *PostgresRepository) ListFlaggedContent(_ context.Context, _, _ int, _ string) ([]*contentmoderationpb.ModerationResult, int, error) {
	// TODO: implement ListFlaggedContent logic
	return nil, 0, errors.New("not implemented")
}

func (r *PostgresRepository) ApproveContent(_ context.Context, _ string) (*contentmoderationpb.ModerationResult, error) {
	// TODO: implement ApproveContent logic
	return nil, errors.New("not implemented")
}

func (r *PostgresRepository) RejectContent(_ context.Context, _, _ string) (*contentmoderationpb.ModerationResult, error) {
	// TODO: implement RejectContent logic
	return nil, errors.New("not implemented")
}
